// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Drawer component Drawer should be render correct 1`] = `
<DocumentFragment>
  <div
    class="g-drawer g-drawer-right g-drawer-open"
    style="z-index: 1000;"
  >
    <div
      class="g-drawer-mask"
    />
    <div
      class="g-drawer-content"
      style="z-index: 1000; width: 384px; height: 100%;"
    >
      <div
        class="g-drawer-header"
      >
        这是一个Drawer
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle close-button"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-drawer-main"
      >
        <p>
          title
        </p>
      </div>
      <div
        class="g-drawer-footer"
      >
        footer
      </div>
    </div>
  </div>
  <button
    class="g-button g-theme-button g-size-normal g-level-normal"
  >
    show
  </button>
</DocumentFragment>
`;

exports[`Testing Drawer component Drawer should be render correct 2`] = `
<DocumentFragment>
  <div
    class="g-drawer g-drawer-right g-drawer-open"
    style="z-index: 1000;"
  >
    <div
      class="g-drawer-mask"
    />
    <div
      class="g-drawer-content"
      style="z-index: 1000; width: 384px; height: 100%;"
    >
      <div
        class="g-drawer-header"
      >
        这是一个Drawer
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle close-button"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-drawer-main"
      >
        <p>
          title
        </p>
      </div>
      <div
        class="g-drawer-footer"
      >
        footer
      </div>
    </div>
  </div>
  <button
    class="g-button g-theme-button g-size-normal g-level-normal"
  >
    show
  </button>
</DocumentFragment>
`;

exports[`Testing Drawer component should close 1`] = `
<DocumentFragment>
  <div
    class="g-drawer g-drawer-right g-drawer-close"
    style="z-index: 1000;"
  >
    <div
      class="g-drawer-mask"
    />
    <div
      class="g-drawer-content"
      style="z-index: 1000; width: 384px; height: 100%;"
    >
      <div
        class="g-drawer-header"
      >
        这是一个Drawer
        <span
          aria-label="close-circle"
          class="anticon anticon-close-circle close-button"
          role="img"
          tabindex="-1"
        >
          <svg
            aria-hidden="true"
            data-icon="close-circle"
            fill="currentColor"
            focusable="false"
            height="1em"
            viewBox="64 64 896 896"
            width="1em"
          >
            <path
              d="M685.4 354.8c0-4.4-3.6-8-8-8l-66 .3L512 465.6l-99.3-118.4-66.1-.3c-4.4 0-8 3.5-8 8 0 1.9.7 3.7 1.9 5.2l130.1 155L340.5 670a8.32 8.32 0 00-1.9 5.2c0 4.4 3.6 8 8 8l66.1-.3L512 564.4l99.3 118.4 66 .3c4.4 0 8-3.5 8-8 0-1.9-.7-3.7-1.9-5.2L553.5 515l130.1-155c1.2-1.4 1.8-3.3 1.8-5.2z"
            />
            <path
              d="M512 65C264.6 65 64 265.6 64 513s200.6 448 448 448 448-200.6 448-448S759.4 65 512 65zm0 820c-205.4 0-372-166.6-372-372s166.6-372 372-372 372 166.6 372 372-166.6 372-372 372z"
            />
          </svg>
        </span>
      </div>
      <div
        class="g-drawer-main"
      >
        <p>
          title
        </p>
      </div>
      <div
        class="g-drawer-footer"
      >
        footer
      </div>
    </div>
  </div>
  <button
    class="g-button g-theme-button g-size-normal g-level-normal"
  >
    show
  </button>
</DocumentFragment>
`;
